dataset1235/2025-2/805158916/users/1639372129/executions/2651470117_2383239197.log
== RUN (2025-08-27 02:53:47)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
ang = float(input("insira um numero: "))
dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 13:42:37)
-- CODE: 
import math
a = float(input())
b = float (input())
g = float(input())

g_rad = math.radians(g)
c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(g_rad))

print(round(c, 2))
            
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:33:53)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:44)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:32:05)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:31:22)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dy = ang
dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang))
                                       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:32:34)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:53:48)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
ang = float(input("insira um numero: "))
dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:17)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:01)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = sqrt((da**2+db**2-2*da*db*(cos(radians(dy))
                                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:31:15)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dy = ang
dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:30:42)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dy = ang
dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:32:03)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:33:01)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:53:46)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
ang = float(input("insira um numero: "))
dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:32:37)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db)*(cos(radians(dy))
                                         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:53:49)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
ang = float(input("insira um numero: "))
dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2)+(db**2)-(2*da*db)*(cos(radians(ang)))
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:18)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = sqrt(da**2+db**2-2*da*db*(cos(radians(dy)))
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:32:07)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db*(cos(radians(dy))
                                       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:33:00)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt(da**2+db**2-2*da*db)*(cos(radians(dy))
                                        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:38)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:37)
-- CODE: 
import math
da = float(input("insira um numero: "))
db = float(input("insira um numero: "))
dy = float(input("insira um numero: "))
dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
print(round(dc, 2))
            
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    dc = math.sqrt((da**2+db**2-2*da*db*(cos(radians(dy)))
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
